fixed product text margin and alignment

--- a/assets/app.css
+++ b/assets/app.css
@@ -571,7 +571,7 @@ blockquote,
 	figure,
 	p,
 	pre {
-  margin: 10px;
+  /*margin: 10px;*/
 }
 
 .visible {
