--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -169,8 +169,7 @@
 }
 
 .card__heading {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 .card__heading:last-child {
